--- a/res/xml/livedisplay.xml
+++ b/res/xml/livedisplay.xml
@@ -44,21 +44,21 @@
             android:persistent="false" />
 
     <!-- Outdoor mode / SRE -->
-    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+    <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="display_auto_outdoor_mode"
             android:title="@string/live_display_outdoor_mode_title"
             android:summary="@string/live_display_outdoor_mode_summary"
             android:defaultValue="@*android:bool/config_defaultAutoOutdoorMode" />
 
     <!-- Anti flicker mode / DC dimming -->
-    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+    <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="display_anti_flicker"
             android:title="@string/live_display_anti_flicker_title"
             android:summary="@string/live_display_anti_flicker_summary"
             android:defaultValue="false" />
 
     <!-- Reading mode -->
-    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+    <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="display_reading_mode"
             android:title="@string/live_display_reading_mode_title"
             android:summary="@string/live_display_reading_mode_summary"
@@ -86,14 +86,14 @@
                 android:persistent="false"/>
 
         <!-- Adaptive backlight -->
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
                 android:key="display_low_power"
                 android:title="@string/live_display_low_power_title"
                 android:summary="@string/live_display_low_power_summary"
                 android:defaultValue="@*android:bool/config_defaultCABC" />
 
         <!-- Color enhancement -->
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
                 android:key="display_color_enhance"
                 android:title="@string/live_display_enhance_color_title"
                 android:summary="@string/live_display_enhance_color_summary"
