--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -19,19 +19,19 @@
             android:title="@string/system_navigation_title"
             android:fragment="com.android.settings.gestures.SystemNavigationGestureSettings" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="navigation_bar_compact_layout"
             android:title="@string/navigation_bar_compact_layout_title"
             android:summary="@string/navigation_bar_compact_layout_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="navigation_bar_menu_arrow_keys"
             android:title="@string/navigation_bar_arrow_keys_title"
             android:summary="@string/navigation_bar_arrow_keys_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+        <com.skylineui.support.preferences.SecureSettingSwitchPreference
             android:key="sysui_nav_bar_inverse"
             android:title="@string/nav_bar_layout_inverse_title"
             android:summary="@string/nav_bar_layout_inverse_summary"
@@ -74,18 +74,18 @@
         android:key="volume_keys"
         android:title="@string/hardware_keys_volume_keys_title" >
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="volume_wake_screen"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="volume_answer_call"
             android:title="@string/volume_answer_call_title"
             android:summary="@string/volume_answer_call_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="volbtn_music_controls"
             android:title="@string/volbtn_music_controls_title"
             android:summary="@string/volbtn_music_controls_summary"
@@ -104,7 +104,7 @@
             android:title="@string/swap_volume_buttons_title"
             android:summary="@string/swap_volume_buttons_summary" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="click_partial_screenshot"
             android:title="@string/click_partial_screenshot_title"
             android:summary="@string/click_partial_screenshot_summary"
@@ -115,7 +115,7 @@
         android:key="swap_capacitive_keys_cat"
         android:title="@string/swap_capacitive_keys_title">
 
-        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+        <com.skylineui.support.preferences.SecureSettingSwitchPreference
             android:key="swap_capacitive_keys"
             android:title="@string/swap_capacitive_keys_title"
             android:summary="@string/swap_capacitive_keys_summary"
@@ -139,7 +139,7 @@
         android:key="home_key"
         android:title="@string/hardware_keys_home_key_title" >
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="home_wake_screen"
             android:title="@string/button_wake_title"
             android:defaultValue="true" />
@@ -172,7 +172,7 @@
         android:key="back_key"
         android:title="@string/hardware_keys_back_key_title" >
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="back_wake_screen"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
@@ -191,7 +191,7 @@
         android:key="menu_key"
         android:title="@string/hardware_keys_menu_key_title" >
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="menu_wake_screen"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
@@ -218,7 +218,7 @@
         android:key="assist_key"
         android:title="@string/hardware_keys_assist_key_title" >
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="assist_wake_screen"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
@@ -245,7 +245,7 @@
         android:key="app_switch_key"
         android:title="@string/hardware_keys_appswitch_key_title" >
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="app_switch_wake_screen"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
@@ -272,18 +272,18 @@
         android:key="camera_key"
         android:title="@string/hardware_keys_camera_key_title">
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="camera_wake_screen"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="camera_sleep_on_release"
             android:title="@string/camera_sleep_on_release_title"
             android:summary="@string/camera_sleep_on_release_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="camera_launch"
             android:title="@string/camera_launch_title"
             android:summary="@string/camera_launch_summary"
@@ -295,13 +295,13 @@
         android:key="others_settings_category"
         android:title="@string/others_settings_title" >
 
-        <com.android.settings.custom.preference.RemotePreference
+        <com.skylineui.support.preferences.RemotePreference
             android:key="additional_buttons"
             android:title="@string/additional_buttons_title"
             settings:requiresAction="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS">
             <intent
                 android:action="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
-        </com.android.settings.custom.preference.RemotePreference>
+        </com.skylineui.support.preferences.RemotePreference>
 
     </PreferenceCategory>
 </PreferenceScreen>
