--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -143,7 +143,7 @@
             android:summary="@string/peak_refresh_rate_summary"
             settings:controller="com.android.settings.display.PeakRefreshRatePreferenceController"/>
 
-        <com.android.settings.custom.preference.SystemSettingListPreference
+        <com.skylineui.support.preferences.SystemSettingListPreference
             android:key="display_cutout_hidden"
             android:title="@string/display_cutout_mode_title"
             android:summary="%s"
@@ -184,14 +184,14 @@
             android:fragment="com.android.settings.display.DisplayCutoutForceFullscreenSettings"
             settings:controller="com.android.settings.display.DisplayCutoutForceFullscreenPreferenceController" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="high_touch_polling_rate_enable"
             android:title="@string/high_touch_polling_rate_title"
             android:summary="@string/high_touch_polling_rate_summary"
             android:defaultValue="false"
             settings:controller="com.android.settings.custom.touch.HighTouchPollingRateSettingsPreferenceController" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="high_touch_sensitivity_enable"
             android:title="@string/high_touch_sensitivity_title"
             android:summary="@string/high_touch_sensitivity_summary"
@@ -199,13 +199,13 @@
             settings:controller="com.android.settings.custom.touch.HighTouchSensitivitySettingsPreferenceController" />
 
         <!-- Double tap to sleep -->
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="double_tap_sleep_gesture"
             android:title="@string/status_bar_double_tap_to_sleep_title"
             android:summary="@string/status_bar_double_tap_to_sleep_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.custom.preference.GlobalSettingSwitchPreference
+        <com.skylineui.support.preferences.GlobalSettingSwitchPreference
             android:key="wake_when_plugged_or_unplugged"
             android:title="@string/wake_when_plugged_or_unplugged_title"
             android:summary="@string/wake_when_plugged_or_unplugged_summary"
