--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -23,7 +23,7 @@
     android:title="@string/gesture_settings_activity_title"
     settings:keywords="@string/keywords_gesture_navigation_settings">
 
-    <com.android.settings.custom.preference.SystemSettingListPreference
+    <com.skylineui.support.preferences.SystemSettingListPreference
         android:key="key_edge_long_swipe_action"
         android:dialogTitle="@string/navigation_bar_edge_long_swipe_title"
         android:title="@string/navigation_bar_edge_long_swipe_title"
@@ -32,7 +32,7 @@
         android:entryValues="@array/hardware_keys_action_values"
         android:defaultValue="0" />
 
-    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+    <com.skylineui.support.preferences.SystemSettingSwitchPreference
         android:key="navigation_bar_hint"
         android:title="@string/show_navbar_gesture_bar_title"
         android:summary="@string/show_navbar_gesture_bar_summary"
