--- a/res/xml/language_and_input.xml
+++ b/res/xml/language_and_input.xml
@@ -106,7 +106,7 @@
             android:title="@string/pointer_speed"
             android:dialogTitle="@string/pointer_speed" />
 
-        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+        <com.skylineui.support.preferences.SecureSettingSwitchPreference
             android:key="feature_touch_hovering"
             android:title="@string/touchscreen_hovering_title"
             android:summary="@string/touchscreen_hovering_summary"
