--- a/res/xml/physical_keyboard_settings.xml
+++ b/res/xml/physical_keyboard_settings.xml
@@ -39,13 +39,13 @@
         android:key="keyboard_extras_category"
         android:title="@string/keyboard_extras_title" >
 
-        <com.android.settings.custom.preference.RemotePreference
+        <com.skylineui.support.preferences.RemotePreference
             android:key="advanced_keyboard_settings"
             android:title="@string/advanced_keyboard_settings_title"
             settings:requiresAction="org.lineageos.settings.device.ADVANCED_KEYBOARD_SETTINGS">
             <intent
                 android:action="org.lineageos.settings.device.ADVANCED_KEYBOARD_SETTINGS" />
-        </com.android.settings.custom.preference.RemotePreference>
+        </com.skylineui.support.preferences.RemotePreference>
 
     </PreferenceCategory>
 
