--- a/res/xml/power_button_torch.xml
+++ b/res/xml/power_button_torch.xml
@@ -32,7 +32,7 @@
         android:summary="@string/power_button_torch_summary"
         app:controller="com.android.settings.gestures.PowerButtonTorchGesturePreferenceController" />
 
-    <com.android.settings.custom.preference.SystemSettingListPreference
+    <com.skylineui.support.preferences.SystemSettingListPreference
         android:key="torch_long_press_power_timeout"
         android:dialogTitle="@string/torch_long_press_power_timeout_title"
         android:title="@string/torch_long_press_power_timeout_title"
