--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -20,7 +20,7 @@
         </Preference>
     </PreferenceCategory>
 
-    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+    <com.skylineui.support.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_gesture"
         android:title="@string/status_bar_double_tap_to_sleep_title"
         android:summary="@string/status_bar_double_tap_to_sleep_summary"
@@ -30,7 +30,7 @@
         android:key="status_bar_clock_key"
         android:title="@string/status_bar_clock_title">
 
-        <com.android.settings.custom.preference.SystemSettingListPreference
+        <com.skylineui.support.preferences.SystemSettingListPreference
             android:key="status_bar_clock"
             android:title="@string/status_bar_clock_position_title"
             android:summary="%s"
@@ -39,13 +39,13 @@
             android:entryValues="@array/status_bar_clock_position_values"
             android:defaultValue="2" />
 
-        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+        <com.skylineui.support.preferences.SecureSettingSwitchPreference
             android:key="clock_seconds"
             android:title="@string/status_bar_clock_show_seconds_title"
             android:summary="@string/status_bar_clock_show_seconds_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.custom.preference.SystemSettingListPreference
+        <com.skylineui.support.preferences.SystemSettingListPreference
             android:key="status_bar_am_pm"
             android:title="@string/status_bar_am_pm_title"
             android:summary="%s"
@@ -59,7 +59,7 @@
         android:key="status_bar_battery_key"
         android:title="@string/status_bar_battery_title">
 
-        <com.android.settings.custom.preference.SystemSettingListPreference
+        <com.skylineui.support.preferences.SystemSettingListPreference
             android:key="status_bar_battery_style"
             android:title="@string/status_bar_battery_style_title"
             android:summary="%s"
@@ -68,7 +68,7 @@
             android:entryValues="@array/status_bar_battery_style_values"
             android:defaultValue="0" />
 
-        <com.android.settings.custom.preference.SystemSettingListPreference
+        <com.skylineui.support.preferences.SystemSettingListPreference
             android:key="status_bar_show_battery_percent"
             android:title="@string/status_bar_battery_percentage_title"
             android:summary="%s"
@@ -82,20 +82,20 @@
     <PreferenceCategory
         android:title="@string/status_bar_brightness_category"
         android:key="status_bar_brightness_category">
-        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+        <com.skylineui.support.preferences.SecureSettingSwitchPreference
             android:key="qs_show_brightness_slider"
             android:title="@string/status_bar_brightness_slider_title"
             android:summary="@string/status_bar_brightness_slider_summary"
             android:defaultValue="true" />
 
-        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+        <com.skylineui.support.preferences.SecureSettingSwitchPreference
             android:key="qs_show_auto_brightness"
             android:title="@string/status_bar_brightness_slider_auto_title"
             android:summary="@string/status_bar_brightness_slider_auto_summary"
             android:dependency="qs_show_brightness_slider"
             android:defaultValue="true" />
 
-        <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        <com.skylineui.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
             android:summary="@string/status_bar_toggle_brightness_summary"
@@ -104,7 +104,7 @@
 
     <PreferenceCategory
         android:title="@string/qs_title">
-        <com.android.settings.custom.preference.SystemSettingListPreference
+        <com.skylineui.support.preferences.SystemSettingListPreference
             android:key="qs_quick_pulldown"
             android:title="@string/status_bar_quick_qs_pulldown_title"
             android:entries="@array/status_bar_quick_qs_pulldown_entries"
