Settings: Allow showing Ambient instead of fully waking [2/2]
Separate configs for dt2w and lift to wake
Follow our convention in the rest of the switches in that page

Co-Authored-By: David Ramírez  <DavidYonatan9@hotmail.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -91,4 +91,8 @@
     <string name="gesture_navbar_radius_title">Pill radius</string>
     <string name="thin_label">Thin</string>
     <string name="thick_label">Thick</string>
+
+    <!-- Ambient wake toggles -->
+    <string name="doze_gesture_ambient_title">Show Ambient</string>
+    <string name="doze_gesture_ambient_summary">Show Ambient Display instead of fully waking the screen up</string>
 </resources>
