Settings: Add restart systemui shortcut to power menu [2/2] Change-Id: I9576d599c38d343cb7daa1ae88714b740be9d2d4 Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -104,4 +104,7 @@
 
     <!-- Battery temperature -->
     <string name="battery_temp">Temperature</string>
+
+    <!-- Text shown for the title of the restart systemui option -->
+    <string name="power_menu_restart_systemui_title">Restart SystemUI</string>
 </resources>
