--- a/res/layout/skylineui_logo.xml
+++ b/res/layout/skylineui_logo.xml
@@ -27,5 +27,6 @@
         android:adjustViewBounds="true"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_margin="8dp"
         android:scaleType="centerInside"/> 
 </LinearLayout>
