Settings: Move monet settings to SkylineUI Workstation

--- a/res/xml/skylineui_lab_settings.xml
+++ b/res/xml/skylineui_lab_settings.xml
@@ -39,4 +39,10 @@
         android:summary="@string/ignore_window_secure_summary"
         android:defaultValue="false"/>
 
+        <Preference
+            android:key="monet_settings"
+            android:title="@string/monet_settings_title"
+            android:summary="@string/monet_settings_sammary"
+            android:fragment="com.android.settings.custom.fragments.MonetSettings" />
+
 </PreferenceScreen>
