Settings: Add toggle for Smart 5G [2/2]
Change-Id: I72958e2313b48553ba82565ace8ebf5dd9e0cdf4

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -53,4 +53,8 @@
     <!-- Wi-Fi Standard icon -->
     <string name="show_wifi_standard_icon_title">Show Wi-Fi type icon</string>
     <string name="show_wifi_standard_icon_summary">Show Wi-Fi type in Wi-Fi signal indicator</string>
+
+    <!-- Smart 5G -->
+    <string name="smart_5g_title">Smart 5G</string>
+    <string name="smart_5g_summary">Automatically switch between 5G and 4G to reduce battery consumption</string>
 </resources>
