--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -64,4 +64,17 @@
     <string name="reticker_summary">Replace heads-up notification with slim and less invasive version of redesigned ticker</string>
     <string name="reticker_colored_title">Use app colored background</string>
     <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
+
+    <!-- Vibration patterns -->
+    <string name="notification_vibration_pattern_title">Notification vibration pattern</string>
+    <string name="ring_vibration_pattern_title">Ring vibration pattern</string>
+    <string name="pattern_default">Device default</string>
+    <string name="pattern_dzzz" translatable="false">dzzz</string>
+    <string name="pattern_dzzz_dzzz" translatable="false">dzzz-dzzz</string>
+    <string name="pattern_dzzz_da" translatable="false">dzzz-da</string>
+    <string name="pattern_mm_mm_mm" translatable="false">mm-mm-mm</string>
+    <string name="pattern_da_mm" translatable="false">da-mm</string>
+    <string name="pattern_da_da" translatable="false">da-da</string>
+    <string name="pattern_da_da_dzzz" translatable="false">da-da-dzzz</string>
+    <string name="pattern_da_dzzz_da" translatable="false">da-dzzz-da</string>
 </resources>
