--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -99,4 +99,7 @@
     <!-- Doze enablement -->
     <string name="doze_enabled_title">Ambient display</string>
     <string name="doze_enabled_summary">Whether to enable the doze package functionality</string>
+
+    <!-- Fullscreen gestures -->
+    <string name="navbar_category">Navigation bar</string>
 </resources>
