--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -22,4 +22,8 @@
     <string name="skylineui_lab_title">SkylineUI Lab</string>
     <string name="skylineui_lab_footer">At your own risk if you use spoof</string>
     <string name="skylineui_lab_summary">Features</string>
+
+    <!-- Ignore window secure -->
+    <string name="ignore_window_secure_title">Ignore window secure flags</string>
+    <string name="ignore_window_secure_summary">Removes the screenshots and screenrecords limits for all applicatications, restart applications for the change to take effect.</string>
 </resources>
